--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,24 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Hello world!</p>
+    <h1>Pending Deliveries</h1>
+
+    <!-- Table to display the deliveries -->
+    <table>
+      <thead>
+        <tr>
+          <td>Delivery address</td>
+          <td>Expected delivery</td>
+          <td>Actual delivery</td>
+        </tr>
+      </thead>
+      <tbody id="tableBody">
+        <!-- Table rows will be dynamically added here -->
+      </tbody>
+    </table>
+
+    <!-- Button to create new drones -->
+
+    <script src="/JS/script.js"></script>
   </body>
 </html>
