--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,7 +23,7 @@
     </table>
 
     <!-- Button to create new drones -->
-
+    <button id="createDroneButton">Create New Drone</button>
     <script src="/JS/script.js"></script>
   </body>
 </html>
