Sorted from oldest deliveries to newest. Changed from english to danish

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,9 +13,10 @@
     <table>
       <thead>
         <tr>
-          <td>Delivery address</td>
-          <td>Expected delivery</td>
-          <td>Actual delivery</td>
+          <td>Leveringsadresse</td>
+          <td>Forventet levering</td>
+          <td>Faktisk levering</td>
+          <td>Mangler drone</td>
         </tr>
       </thead>
       <tbody id="tableBody">
